--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -352,15 +352,17 @@ h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
-#hero {
+/* #hero {
   width: 100%;
   height: 75vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg.jpg") top center; 
   background-size: cover;
   position: relative;
   margin-bottom: -140px;
   z-index: 1;
 }
+
+*/
 
 #hero:before {
   content: "";
